--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <meta content="width=device-width, initial-scale=1" name="viewport">
 </head>
 <body>
 <% if notice %>
@@ -17,6 +18,46 @@
 <%= button_to "Log out", destroy_user_session_path, :method => :delete %>
   <p>Welcome, <%= current_user.email %></p>
 <% end %>
-<%= yield %>
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+	<%= link_to "SeatIn", {:controller => "home", :action => "index"}, {:class => "navbar-brand"} %>
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+	<form class="navbar-form navbar-left" role="search">
+	  <div class="form-group">
+	    <input type="text" class="form-control" placeholder="Search">
+	  </div>
+	  <button type="submit" class="btn btn-default">Submit</button>
+	</form>
+	<ul class="nav navbar-nav navbar-right">
+	  <li><a href="#">Link</a></li>
+	  <li class="dropdown">
+	    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+	    <ul class="dropdown-menu">
+	      <li><a href="#">Action</a></li>
+	      <li><a href="#">Another action</a></li>
+	      <li><a href="#">Something else here</a></li>
+	      <li><a href="#">Separated link</a></li>
+	    </ul>
+	  </li>
+	</ul>
+      </div><!--/.nav-collapse -->
+    </div>
+  </div>
+  <div class="container">
+    <%= yield %>
+  </div>
 </body>
 </html>
