--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-	<%= link_to "SeatIn", {:controller => "home", :action => "index"}, {:class => "navbar-brand"} %>
+	<%= link_to "SeatIn", {:controller => "/home", :action => "index"}, {:class => "navbar-brand"} %>
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
