--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,17 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
-<div class="starter-template">
-  <h1>Bootstrap starter template</h1>
-  <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
- <p>成功したーーー！</p>
+<div class="page-header">
+  <h1>Home#index <small>Find me in app/views/home/index.html.erb</small></h1>
+</div>
+
+<div class="jumbotron">
+  <h1>Welcome to Our Web Site!</h1>
+  <p>We shoud write an explanation about our web site in here.</p>
+  <p>For example, what we can do in our web site.</p>
+  <div class="bs-callout bs-callout-info">
+    <p>ここで重大発表！</p>
+    <p>突然ですが、サイトのコンテンツをガラッと変更しようと思います！</p>
+    <p>まだなーんにも作ってないので大丈夫だと思うんだけど、<strong>座席チェックインサービス</strong>ではなくて、<strong>都内の体育館、フットサルコート、野球場の空き状況まとめサービス</strong>に変更したいです！</p>
+    <p>やっぱりまとめサイトの方が作りやすいっていう魅力があるので。(2014.05.21 Kazuto)</p>
+  </div>
+  <p><a class="btn btn-info btn-lg" role="button" href="#">Learn more</a></p>
+  <p class="lead" align="right"><span class="glyphicon glyphicon-copyright-mark"></span>Chisato, Kazuto, Takeshi and Yusuke<p>
 </div>
