--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,6 @@
 <% if alert %>
   <p class="alert alert-error"><%= alert %></p>
 <% end %>
-<% if user_signed_in? %>
-<%= button_to "Log out", destroy_user_session_path, :method => :delete %>
-  <p>Welcome, <%= current_user.email %></p>
-<% end %>
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
       <div class="navbar-header">
@@ -31,7 +27,7 @@
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="">Home</a></li>
+          <li class="active"><a href=""><span class="glyphicon glyphicon-home"></span> Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -39,14 +35,20 @@
 	  <div class="form-group">
 	    <input type="text" class="form-control" placeholder="Search">
 	  </div>
-	  <button type="submit" class="btn btn-default">Submit</button>
+	  <button type="submit" class="btn btn-default">Submit <span class="glyphicon glyphicon-search"></span></button>
 	</form>
 	<ul class="nav navbar-nav navbar-right">
 	  <li><a href="#">Link</a></li>
 	  <li class="dropdown">
-	    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+	    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> Account <b class="caret"></b></a>
 	    <ul class="dropdown-menu">
-	      <li><a href="#">Action</a></li>
+	      <%- if user_signed_in? -%>
+	        <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
+              <%- else -%>
+	        <li><%= link_to "Login", new_user_session_path %></li>
+		<li><%= link_to "Sing Up", new_user_registration_path %></li>
+              <%- end -%>
+	      <li><%= link_to "Profile", edit_user_registration_path %></li>
 	      <li><a href="#">Another action</a></li>
 	      <li><a href="#">Something else here</a></li>
 	      <li><a href="#">Separated link</a></li>
