名前登録可能に.

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,8 +1,14 @@
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
+<%- if alert || notice -%>
+  <div class="alert alert-danger">
+    <%= devise_error_messages! %>
+  </div>
+<%- end -%>
+  <div><%= f.label :name %><br />
+  <%= f.text_field :name, autofocus: true %></div>
+  
   <div><%= f.label :email %><br />
   <%= f.email_field :email, autofocus: true %></div>
 
