--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,13 @@
       <ul class="nav navbar-nav navbar-right">
 	<li><a href="#">Link</a></li>
 	<li class="dropdown">
-	  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> Account <b class="caret"></b></a>
+	  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span>
+	    <%- if user_signed_in? -%>
+	      <%= current_user.name %>
+	    <%- else -%>
+	      Account
+	    <%- end -%>
+	    <b class="caret"></b></a>
 	  <ul class="dropdown-menu">
 	    <%- if user_signed_in? -%>
 	    <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
