とりあえずgmapを表示とテーブル作成

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,3 +21,20 @@
   <p><a class="btn btn-info btn-lg" role="button" href="#">Learn more</a></p>
   <p class="lead" align="right"><span class="glyphicon glyphicon-copyright-mark"></span>Chisato, Kazuto, Takeshi and Yusuke<p>
 </div>
+
+
+<div style='width: 600px;'>
+  <div id="map" style='width: 600px; height: 400px;'></div>
+</div>
+
+<script type="text/javascript">
+    handler = Gmaps.build('Google');
+    handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+      markers = handler.addMarkers(<%=raw @hash.to_json %>);
+      handler.bounds.extendWith(markers);
+      handler.fitMapToBounds();
+    });
+</script>
+
+<br />
+
