--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,8 +31,8 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href=""><span class="glyphicon glyphicon-home"></span> Home</a></li>
-        <li><a href="#about">About</a></li>
+        <li class="active"><a href="/home/index"><span class="glyphicon glyphicon-home"></span> Home</a></li>
+	<li><%= link_to "About Us", home_about_us_path %>
         <li><a href="#contact">Contact</a></li>
       </ul>
       <form class="navbar-form navbar-left" role="search">
@@ -71,11 +71,12 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-9" role="main">
+    <div class="col-xs-12 col-md-9" role="main"><!-- 本文 -->
       <%= yield %>
     </div>
-    <div class="col-md-3">
-      <div class="bs-docs-sidebar hidden-print affix" role="complementary" style="">
+    <div class="col-xs-6 col-md-3"><!-- サイドバー -->
+      <!--<div class="bs-docs-sidebar hidden-print affix" role="complementary" style="">-->
+      <div class="well sidebar-nav">
 	<ul class="nav bs-docs-sidenav">
           <li class="nav-header">Home</li>
           <li><a href="#">Home</a></li>
