--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,12 +78,7 @@
       <!--<div class="bs-docs-sidebar hidden-print affix" role="complementary" style="">-->
       <div class="well sidebar-nav">
 	<ul class="nav bs-docs-sidenav">
-          <li class="nav-header">Home</li>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li class="nav-header">Account</li>
-          <li><a href="#">Sign up</a></li>
-          <li><a href="#">Login</a></li>
+	  <%= yield :side_bar %>
 	</ul>
       </div>
     </div>
