--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -1,41 +1,48 @@
-<h1>Listing spots</h1>
+<%= content_for :side_bar do %>
+<li class="nav-header">テスト</li>
+<li><%= link_to "食べログ", "http://www.tabelog/com/" %></li>
+<%- end -%>
 
-<table>
+<div class="page-header">
+  <h1>Posts#index <small>Find me in app/views/posts/index.html.erb</small></h1>
+</div>
+
+<table class="table table-striped table-bordered">
   <thead>
-    <tr>
-      <th>Name</th>
-      <th>Category</th>
-      <th>Description</th>
-      <th>Address</th>
-      <th>Tel</th>
-      <th>Url</th>
-      <th>Latitude</th>
-      <th>Longitude</th>
-      <th></th>
-      <th></th>
-      <th></th>
+    <tr class="warning">
+      <th>#</th>
+      <th>名前</th>
+      <th>住所</th>
+      <th>TEL</th>
+      <th>HP</th>
+      <th>操作</th>
     </tr>
   </thead>
-
   <tbody>
-    <% @spots.each do |spot| %>
-      <tr>
-        <td><%= spot.name %></td>
-        <td><%= spot.category %></td>
-        <td><%= spot.description %></td>
-        <td><%= spot.address %></td>
-        <td><%= spot.tel %></td>
-        <td><%= spot.url %></td>
-        <td><%= spot.latitude %></td>
-        <td><%= spot.longitude %></td>
-        <td><%= link_to 'Show', spot %></td>
-        <td><%= link_to 'Edit', edit_spot_path(spot) %></td>
-        <td><%= link_to 'Destroy', spot, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+    <%- @spots.each do |spot| %>
+    <tr>
+      <td><%= spot.id %></td>
+      <td><%= spot.name %></td>
+      <td><%= spot.address %></td>
+      <td><%= spot.tel %></td>
+      <td><%= link_to_if(spot.url.present?, spot.url.to_s, spot.url) %></td>
+      <td width="55px"><%= link_to "[編集]", edit_spot_path(spot) %></br>
+	<%= link_to "[削除]", spot, method: :delete, data: { confirm: 'Are you sure?' } %>
+      </td>
+    </tr>
+    <%- end -%>
   </tbody>
 </table>
 
-<br>
+<div id="map" style='width: 100%; height: 400px;'></div>
 
-<%= link_to 'New Spot', new_spot_path %>
+<script type="text/javascript">
+  handler = Gmaps.build('Google');
+  handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+  markers = handler.addMarkers(<%=raw @hash.to_json %>);
+  handler.bounds.extendWith(markers);
+  handler.fitMapToBounds();
+  });
+</script>
+
+<br />
