--- a/app/views/spots/edit.html.erb
+++ b/app/views/spots/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing spot</h1>
+<div class="page-header">
+  <h1>スポット情報編集</h1>
+</div>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @spot %> |
-<%= link_to 'Back', spots_path %>
+<%= form_for [:confirm, @spot] do |f| %> 
+<%= render :partial => 'form', :locals => { :f => f } %>
+<% end %>
