--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New spot</h1>
+<div class="page-header">
+  <h1>フットサルコート新規登録<br />
+  <small>あなたの知ってる都内のフットサルコート情報を追加しよう！</small></h1>
+</div>
 
-<%= render 'form' %>
+<%= form_for [ :confirm, @spot ] do |f| %>
+<%= render :partial => 'form', :locals => { :f => f } %>
+<% end %>
 
-<%= link_to 'Back', spots_path %>
+
+
+
