--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,13 +27,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "SeatIn", home_about_us_path, {:class => "navbar-brand"} %>
+      <%# link_to "SeatIn", home_about_us_path, {:class => "navbar-brand"} %>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li><%= link_to sanitize('<span class="glyphicon glyphicon-home"></span>') + ' Home', spots_path, method: :get %></a></li>
 	<li><%= link_to "About Us", home_about_us_path %>
-        <li><a href="#contact">Contact</a></li>
       </ul>
       <form class="navbar-form navbar-left" role="search">
 	<div class="form-group">
