--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,18 @@
-<h2>Sign up</h2>
+<link rel="stylesheet" href="formly.css" type="text/css" />
+<script type="text/javascript" src="jquery-1.6.1.min.js"></script>
+<script type="text/javascript" src="formly.js"></script>
+<script type="text/javascript">
+$(function() {
+$('#new_user').formly({
+'onBlur':false, //マウスオーバーでダイアログを出すか
+'theme':'Light' //指定なし,Light,Darkの3種類
+});
+});
+</script>
+
+<div class="page-header">
+<h2>Sign up <small>新規ユーザー登録</small></h2>
+</div>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 <%- if alert || notice -%>
@@ -6,19 +20,28 @@
     <%= devise_error_messages! %>
   </div>
 <%- end -%>
-  <div><%= f.label :name %><br />
-  <%= f.text_field :name, autofocus: true %></div>
-  
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
-
-  <div><%= f.label :password %><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
-
-  <div><%= f.submit "Sign up" %></div>
+<table>
+  <tbody>
+    <tr>
+      <td><%= f.label :name %></td>
+      <td><%= f.text_field :name, autofocus: true %></td>
+    </tr>
+    <tr>
+      <td><%= f.label :email %></td>
+      <td><%= f.email_field :email, autofocus: true %></td>
+    <tr>
+    <tr>
+      <td><%= f.label :password %></td>
+      <td><%= f.password_field :password, autocomplete: "off" %></td>
+    </tr>
+    <tr>
+      <td width="200px"><%= f.label :password_confirmation %></td>
+      <td><%= f.password_field :password_confirmation, autocomplete: "off" %></td>
+    </tr>
+  </tbody>
+</table>
+<%= f.submit "Sign up" %>
+<%= submit_tag "Clear", :type=>"reset" %>
 <% end %>
 
 <%= render "users/shared/links" %>
